17Jul25|Blogs page|Designed how to page

--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,7 @@ body {
   background-color: #fff;
   color: #333;
   line-height: 1.6;
-  padding-top: 60px; /* space for sticky header */
+  /* padding-top: 60px; space for sticky header */
 }
 
 /* Header & Nav */
