18Jul25|Games page|Designed games page

--- a/css/style.css
+++ b/css/style.css
@@ -210,6 +210,27 @@ section h3:hover {
   font-size: 1rem;
   margin: 1rem 2rem 1rem 2rem;
 }
+
+@media (max-width: 600px) {
+  .search-section {
+    flex-direction: column;
+    align-items: stretch;
+    padding: 0.5rem 0.2rem;
+  }
+  .search-bar-text {
+    font-size: 1.1rem;
+    margin: 0.5rem 0.2rem;
+    text-align: center;
+  }
+  .search-bar {
+    width: 100%;
+    min-width: 0;
+    max-width: 98vw;
+    font-size: 0.98rem;
+    margin: 0.5rem 0.2rem;
+    height: 28px;
+  }
+}
 .games-section-menu {
   display: flex;
   flex-direction: row;
