19Jul25|Tools page|Designed tools page

--- a/css/games.css
+++ b/css/games.css
@@ -8,3 +8,16 @@
   text-align: center;
   box-shadow: 0 2px 12px rgba(44,62,80,0.07);
 }
+.games-card{
+  border-radius: 8px;
+  padding: 0.5em 0.8em;
+}
+
+.games-card-desc {
+  border-radius: 16px;
+  width: 220px;
+  height: 70px;
+  /* padding: 0.5em 0.8em; */
+  box-shadow: 0 4px 18px rgba(80,167,194,0.13);
+  transition: transform 0.2s, box-shadow 0.2s;
+}
