31Jul25|Sub menu in header

--- a/css/blogs.css
+++ b/css/blogs.css
@@ -428,7 +428,7 @@
 
   .blogs-main-category-menu {
     max-width: 98vw;
-    border-radius: 6px;
+    /* border-radius: 6px; */
   }
 
   .blogs-main-category-menu ul {
