--- a/css/sports.css
+++ b/css/sports.css
@@ -22,21 +22,6 @@
     box-shadow: 0 2px 12px rgba(44, 62, 80, 0.07);
   }
 
-  .sports-section-search {
-    background-color: #ffffff;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    /* background: linear-gradient(90deg, #ade9f4 0%, #57c4ff 100%);
-  border-radius: 12px;
-  /* padding: 1.2em 0.5em; */
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-    box-shadow: 0 2px 12px rgba(44, 62, 80, 0.07);
-    
-  }
-
   .news-tiles {
     border-radius: 12px;
     /* margin-left: auto;
@@ -74,15 +59,18 @@
   .color3 {
     background: linear-gradient(135deg, #efe0cf 0%, #3b7db8 100%);
   }
-.color4 {
-  background: linear-gradient(135deg, #eddbc2 0%, #fcb69f 100%);
-}
-.color5 {
-  background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
-}
-.color6 {
-  background: linear-gradient(135deg, #f3acb3 0%, #72363e 100%);
-}
+
+  .color4 {
+    background: linear-gradient(135deg, #eddbc2 0%, #fcb69f 100%);
+  }
+
+  .color5 {
+    background: linear-gradient(135deg, #43cea2 0%, #185a9d 100%);
+  }
+
+  .color6 {
+    background: linear-gradient(135deg, #f3acb3 0%, #72363e 100%);
+  }
 
 
   .sports-section-heading {
@@ -278,38 +266,42 @@
     height: 350px;
   }
 
-.card-container {
+  .card-container {
     display: flex;
-  align-items: center;
-  position: hidden;
+    align-items: center;
+    position: hidden;
 
-}
-.card-list {
-  display: flex;
-  overflow: hidden;
-  transition: transform 0.3s ease;
-  width: 100%;
-  height: 100%;
-}
-.card {
-  min-width: 100%;
-  flex-shrink: 0;
-  background: #fff;
-  padding: 0.6rem;
-  border-radius: 6px;
-  box-shadow: 0 0 4px rgba(0,0,0,0.1);
-  /* width: 50px;
+  }
+
+  .card-list {
+    display: flex;
+    overflow: hidden;
+    transition: transform 0.3s ease;
+    width: 100%;
+    height: 100%;
+  }
+
+  .card {
+    min-width: 100%;
+    flex-shrink: 0;
+    background: #fff;
+    padding: 0.6rem;
+    border-radius: 6px;
+    box-shadow: 0 0 4px rgba(0, 0, 0, 0.1);
+    /* width: 50px;
   height: 50px; */
-}
-.card-nav {
-  background: #339aee;
-  border: none;
-  color: white;
-  padding: 0rem 0rem;
-  font-size: 1.2rem;
-  cursor: pointer;
-}
-.timestamp {
-  font-size: 0.8rem;
-  color: #666;
-}
+  }
+
+  .card-nav {
+    background: #339aee;
+    border: none;
+    color: white;
+    padding: 0rem 0rem;
+    font-size: 1.2rem;
+    cursor: pointer;
+  }
+
+  .timestamp {
+    font-size: 0.8rem;
+    color: #666;
+  }
